# taifa-fiala

./: .env.example  .env.railway  .env.sample  .gitignore  API-Dev-2025-07-18.md  ARCHITECTURE_DIAGRAM.md  CICD_SETUP.md  CICD_TEST.md  DEMO_README.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEV-SETUP.md  Deployment Plan Cross-check.md  ENHANCED_ETL_INTEGRATION_SUMMARY.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION OF 2nd INGESTION BRANCH.md  LICENSE  MVP_IMPLEMENTATION_COMPLETE.md  NOTION_SETUP_GUIDE.md  PROJECT_STATUS.md  Platform Description 23054edc4c7381989822c07b7ee61beb.md  Platform Roadmap A Comprehensive, Transparency-foc 23254edc4c7380b0b221ff2a39985e5b.md  RAILWAY_DEPLOYMENT.md  RAILWAY_READY.md  README.md  README_CREWAI.md  SCHEMA.md  VECTOR_DB_INTEGRATION_GUIDE.md  add_columns.sql  apply_community_schema.py  apply_ingestion_schema.py  apply_multilingual_schema.py  apply_schema_supabase.py  check_rls_status.py  community_database_schema.py  data_enhancement_plan.md  database_crewai_enhancement.sql  database_multilingual_schema.sql  debug_backend_health.py  demo_rwanda_pipeline.py  (+61 more)
.github/: README.md
backend/: .gitignore  Dockerfile  MIGRATION_SYSTEM_FIXED.md  README.md  check_db_connection.py  create_supabase_tables.js  diagnose.py  engine_status.py  fix_dependencies.py  migration_helper.py  pyproject.toml  requirements-frozen.txt  requirements.txt  requirements_crewai.txt  run_ingestion_test.py  supabase_migrate.py  supabase_migration.sql  supabase_migration_updated.sql  test_api_endpoint.py  test_db_only.py  test_enrichment_integration.py  test_integration.py  test_migration_helper.py  test_monitoring_integration.py  test_smart_prioritization.py  test_supabase_insert.py  test_supabase_pinecone.py  test_systems.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_organization_id_foreign_key.py  002_enhanced_schema_migration.py  004_etl_pipeline_architecture.py  d92cf90c26ba_initial_migration.py  db8bb6b6488f_sync_all_models_with_sqlite.py
backend/api/: events.py  webhooks.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/database/: sqlite_manager.py
backend/scripts/: analyze_field_population_supabase.py  check_ingested_data.py  content_analysis_enrichment.py
backend/tests/: check_supabase.py  run_ingestion_test.py  test_advanced_vector_search.py  test_api_endpoint.py  test_connections.py  test_db_alternate.py  test_integration.py  test_rss_vector_indexing.py  test_supabase_insert.py  test_supabase_pinecone.py  test_vector_db.py
(+451 files in other folders)
