[tool.poetry]
name = "taifa-fiala-backend"
version = "1.0.0"
description = "AI Africa Funding Tracker - Comprehensive platform to track AI intelligence feed in Africa"
authors = ["TAIFA-FIALA Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and ASGI server
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

# Database
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}

# Supabase
supabase = "^2.0.0"

# Authentication and Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# Configuration
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

# HTTP and Web Scraping
httpx = "^0.27.2"
requests = "^2.31.0"
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.12.0"
crawl4ai = "^0.7.1"

# RSS and Feed Processing
feedparser = "^6.0.10"
lxml = "^5.3.0"

# Data Processing (lightweight)
numpy = "^2.1.1"

# String matching and similarity
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.0"
scikit-learn = "^1.3.0"

# AI and LLM
openai = "^1.6.0"
litellm = "^1.17.0"

# Caching and Background Tasks
redis = "^5.0.0"
aioredis = "^2.0.0"
celery = "^5.3.0"
kombu = "^5.3.0"

# Logging and Monitoring
structlog = "^23.2.0"
python-json-logger = "^2.0.0"

# External APIs (installed via requests/httpx)

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

# Code formatting (optional)
black = "^23.9.0"
isort = "^5.12.0"

[tool.poetry.scripts]
start-server = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
